--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   pronouns         : # example: "she/her"  
   bio              : "Data Scientist and ML Engineer"
   location         : "Milan, Italy"
-  employer         : "UiO. univr"
+  employer         : "UiO, UNIVR"
   uri              : # URL
   email            : "gabrieledurante01@gmail.com" 
 
