--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,11 +9,11 @@ main:
     #url: /cv/
     url: /files/resume.pdf
 
-  - title: "Portfolio"
-    url: /portfolio/
+  # - title: "Portfolio"
+  #   url: /portfolio/
 
-  - title: "Publications"
-    url: /publications/
+  # - title: "Publications"
+  #   url: /publications/
 
   # - title: "Talks"
   #   url: /talks/    
