--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title                    : "Gabriele's Homepage"
 title_separator          : "-"
 name                     : &name "Gabriele Durante"
 description              : &description "personal description"
-url                      : https://exdsgift.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
+url                      : https://gabrieledurante.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "exdsgift/exdsgift.github.io"
 
